2005-05-18  Carlos Perelló Marín <carlos@gnome.org>

	* Removed all obsolete code from here to prevent confusing people as
	the translation status pages are not using this code base and it's
	completely broken.

2003-10-20  Carlos Perelló Marín <carlos@gnome.org>

	* src/*.c: Added initial code to generate the views/groups pages.
	It's a temporal code, I will improve it later, we need status
	pages now.

2003-09-29  Carlos Perelló Marín <carlos@gnome.org>

	* data/gtp.css: Sync with my webpage.

2003-09-29  Carlos Perelló Marín <carlos@gnome.org>

	* data/images/mail.png: Added to send a mail to the translator.
	* src/status-team.[ch]: Added, we have now team stats.
	* src/status-translator.[ch]: Added, also, we have translator stats.
	* src/status-xml.c: Added code to handle team information.
	* src/status.h, src/status-version.c, src/status-translation.[ch],
	main.c: Added code to integrate all modules better.
	* WE ARE NEAR OF 2.0 Release :-P

2003-09-21  Carlos Perelló Marín <carlos@gnome.org>

	* data/images/arrow*.png: Added to be used with sort options
	* back.png: Added for navigation purposes, but will not be used.
	* details.png, download.png: table fields :-)
	* data/gtp.css: Small UI changes
	* src/status*: More work done with html output.

2003-09-20  Carlos Perelló Marín <carlos@gnome.org>

	* data/templates/main-footer.template: Added the common footer.
	* data/images/bar*.png: Added the png to show the bar status (they
	come from KDE's bar*.gif)
	* src/status-module.c, src/status-web.c: Updated so we can use CSS to
	render the GUI.
	* data/gtp.css: Our css

2003-09-20  Carlos Perelló Marín <carlos@gnome.org>

	* The basic report is already done, we need now some .css work to
	create a good interface.
	* data/templates/main-banner.template: Added the common developer
	banner
	
2003-09-20  Carlos Perelló Marín <carlos@gnome.org>

	* Added the start for the xhtml reports generation.
	* Also, the config_t struct is now a global variable.
