@@ -1238,7 +1238,7 @@
       <component name="gnome-control-center" dir="gnome-control-center" group="desktop">
         <podir dir="po"/>
         <potname name="control-center-2.0.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -2253,7 +2253,7 @@
       <component name="libbonoboui" dir="libbonoboui" group="developer-libs">
         <podir dir="po"/>
         <potname name="libbonoboui-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-16"/>
         <regenerate/>
         <download/>
       </component>
@@ -2377,7 +2377,7 @@
       <component name="libgnomeprint" dir="libgnomeprint" group="desktop">
         <podir dir="po"/>
         <potname name="libgnomeprint-2.2.pot"/>
-        <branch name="gnome-2-12"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -2397,7 +2397,7 @@
       <component name="libgnomeprintui" dir="libgnomeprintui" group="desktop">
         <podir dir="po"/>
         <potname name="libgnomeprintui-2.2.pot"/>
-        <branch name="gnome-2-12"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
