@@ -1,3 +1,8 @@
+2006-12-14  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* data/translation-status.xml: Fix branches for control-center
+	bonobo and gnome-print.
+
 2005-05-18  Carlos Perelló Marín <carlos@gnome.org>
 
 	* Removed all obsolete code from here to prevent confusing people as
